logging/loki/gateway-routes/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: default-gateway
    namespace: gateway-system
  hostnames:
  - grafana.prakriti.website
  rules:
  - backendRefs:
    - name: monitoring-grafana
      port: 80
