logging/loki/gateway-routes/loki-test-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-test-route
  namespace: test
spec:
  parentRefs:
  - name: default-gateway
    namespace: gateway-system
  hostnames:
  - loki-test.prakriti.website
  rules:
  - backendRefs:
    - name: service-e
      port: 3000
